Changed Leccion selection to RecyclerView

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,9 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$navigationVersion"
     implementation "androidx.navigation:navigation-ui-ktx:$navigationVersion"
 
+    //RecyclerView
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
+
     implementation "androidx.room:room-runtime:$room_version"
     //annotationProcessor "androidx.room:room-compiler:$room_version" // For Kotlin use kapt instead of annotationProcessor
     //bc kotlin
